--- a/package.json
+++ b/package.json
@@ -14,7 +14,22 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.5",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.24.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "mobx": "^6.3.8",
+    "mobx-react": "^7.2.1",
+    "mobx-react-lite": "^3.2.2",
+    "react-hook-form": "^7.21.0",
+    "react-query": "^3.34.6",
+    "react-router-dom": "^6.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
